--- a/master/bower.json
+++ b/master/bower.json
@@ -74,7 +74,8 @@
     "datatables": "1.10.4",
     "datatables-colvis": "1.1.1",
     "angular-sanitize": "~1.2.27",
-    "angular-resource": "~1.2.27"
+    "angular-resource": "~1.2.27",
+    "ng-token-auth": "~0.0.24"
   },
   "resolutions": {
     "jquery-ui": "1.11.1",
