--- a/master/package.json
+++ b/master/package.json
@@ -26,6 +26,8 @@
     "gulp-w3cjs": "^0.2.1",
     "jpegtran-bin": "*",
     "marked": "^0.3.2",
-    "through2": "^0.6.3"
+    "through2": "^0.6.3",
+    "proxy-middleware": "*",
+    "url": "*"
   }
 }
